--- a/mandelbulber2/formula/ui/riemann_sphere_msltoe.ui
+++ b/mandelbulber2/formula/ui/riemann_sphere_msltoe.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>riemann_sphere_msltoe</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>844</width>
-    <height>1103</height>
+    <height>1113</height>
    </rect>
   </property>
   <property name="windowTitle">
