--- a/mandelbulber2/formula/ui/amazing_surf_mod1.ui
+++ b/mandelbulber2/formula/ui/amazing_surf_mod1.ui
@@ -965,7 +965,7 @@
 &lt;a href=&quot;This formula contains aux.color and aux.actualScale&quot;&gt;This formula contains aux.color and aux.actualScale&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;amazing surf mod1 001.fract&lt;br&gt;amazing_surf 002.fract&lt;br&gt;Sebastian Jennen collection - license Creative Commons  (CC-BY 4.0)/hybrid 02 - rectangle hieroglyphs animation.fract&lt;br&gt;Sebastian Jennen collection - license Creative Commons  (CC-BY 4.0)/hybrid 02 - rectangle hieroglyphs.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;amazing surf mod1 001.fract&lt;br&gt;amazing_surf 002.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/TransfDIFSEllipsoid asurf.fract&lt;br&gt;Sebastian Jennen collection - license Creative Commons  (CC-BY 4.0)/hybrid 02 - rectangle hieroglyphs animation.fract&lt;br&gt;Sebastian Jennen collection - license Creative Commons  (CC-BY 4.0)/hybrid 02 - rectangle hieroglyphs.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
