--- a/mandelbulber2/formula/ui/jos_kleinian.ui
+++ b/mandelbulber2/formula/ui/jos_kleinian.ui
@@ -884,7 +884,7 @@ Offset:</string>
 &lt;a href=&quot;This formula contains aux.color and aux.DE&quot;&gt;This formula contains aux.color and aux.DE&lt;br&gt;
 &lt;/td&gt;&lt;/tr&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;jos_kleinian 001.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/Jos Leys Kleinian Hybrid esc7.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/Jos Leys Kleinian Hybrid inv cos.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/Jos Leys Kleinian sphereInversion.fract&lt;br&gt;Krzysztof Marczak collection - license Creative Commons (CC-BY 4.0)/jos_kleinian 002.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;hex grid 002.fract&lt;br&gt;jos_kleinian 001.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/Jos Leys Kleinian Hybrid esc7.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/Jos Leys Kleinian Hybrid inv cos.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/Jos Leys Kleinian sphereInversion.fract&lt;br&gt;...&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
