--- a/mandelbulber2/formula/ui/transf_difs_grid.ui
+++ b/mandelbulber2/formula/ui/transf_difs_grid.ui
@@ -320,7 +320,7 @@
       <item>
        <widget class="QLabel" name="label_information_general">
         <property name="text">
-         <string notr="true">&lt;p&gt;DIFSGridIteration  fragmentarium code, mdifs by knighty (jan 2012)&lt;br&gt;and  Buddhi&lt;/p&gt;&lt;table&gt;
+         <string notr="true">&lt;p&gt;transfDIFSGridIteration  fragmentarium code, mdifs by knighty (jan 2012)&lt;br&gt;and  Buddhi&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
 &lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;diFS square grid.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
