adding to box difs and a T>hybrid color2 option

--- a/mandelbulber2/formula/ui/difs_box_diagonal_v3.ui
+++ b/mandelbulber2/formula/ui/difs_box_diagonal_v3.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>difs_box_diagonal_v3</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>970</width>
-    <height>5251</height>
+    <height>5431</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -2057,7 +2057,7 @@
      <property name="title">
       <string>Box shape controls</string>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_10" stretch="0,0,0,0,0,0,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_10" stretch="0,0,0,0,0,0,0,0,0">
       <property name="spacing">
        <number>2</number>
       </property>
@@ -2073,6 +2073,13 @@
       <property name="bottomMargin">
        <number>2</number>
       </property>
+      <item>
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledY_false">
+        <property name="text">
+         <string>use oldZ</string>
+        </property>
+       </widget>
+      </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="0,1,0,1">
         <property name="topMargin">
