--- a/mandelbulber2/formula/ui/transf_hybrid_color2.ui
+++ b/mandelbulber2/formula/ui/transf_hybrid_color2.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_hybrid_color2</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
@@ -162,7 +162,7 @@ provides complete control</string>
         <bool>true</bool>
        </property>
        <property name="text">
-        <string notr="true">disable minimum function</string>
+        <string notr="true">enable minimum function</string>
        </property>
       </widget>
      </item>
@@ -1274,14 +1274,14 @@ provides complete control</string>
    <header>my_double_spin_box.h</header>
   </customwidget>
   <customwidget>
-   <class>MyCheckBox</class>
-   <extends>QCheckBox</extends>
-   <header>my_check_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MySpinBox</class>
    <extends>QSpinBox</extends>
    <header>my_spin_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MyCheckBox</class>
+   <extends>QCheckBox</extends>
+   <header>my_check_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
